--- a/quizz/questions/templates/registration/register.html
+++ b/quizz/questions/templates/registration/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
-<body>
+<body>7
     <form action="{% url 'register'%}" method="post">
         {% csrf_token %}
 
